--- a/pom.xml
+++ b/pom.xml
@@ -42,8 +42,8 @@
           <url>https://repo.papermc.io/repository/maven-public/</url>
       </repository>
       <repository>
-          <id>sonatype</id>
-          <url>https://oss.sonatype.org/content/groups/public/</url>
+          <id>jitpack.io</id>
+          <url>https://jitpack.io</url>
       </repository>
   </repositories>
 
@@ -53,6 +53,11 @@
           <artifactId>paper-api</artifactId>
           <version>1.21-R0.1-SNAPSHOT</version>
           <scope>provided</scope>
+      </dependency>
+      <dependency>
+          <groupId>com.github.Eves-Games</groupId>
+          <artifactId>Morpheus</artifactId>
+          <version>1.1.1</version>
       </dependency>
   </dependencies>
 </project>
