--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -2,3 +2,4 @@ name: WelcomeRewards
 version: '${project.version}'
 main: net.worldmc.welcomerewards.WelcomeRewards
 api-version: '1.21'
+depend: [Morpheus]
